@@ -48,11 +48,20 @@ IF(PKG_CONFIG_FOUND)
 	PKG_CHECK_MODULES(PKG_EIGEN3 eigen3)	# Find eigen3 with pkg-config
 	IF(PKG_EIGEN3_FOUND)
 		MESSAGE(STATUS "Using eigen3 in: ${PKG_EIGEN3_INCLUDE_DIRS}")
-		INCLUDE_DIRECTORIES(${PKG_EIGEN3_INCLUDE_DIRS})
+		INCLUDE_DIRECTORIES(${PKG_EIGEN3_INCLUDE_DIRS})		
 		SET(HAS_EIGEN3 1)
 	ENDIF(PKG_EIGEN3_FOUND)
 ENDIF(PKG_CONFIG_FOUND)
 
+# Allow manual setting Eigen3 include path (e.g. for Windows)
+IF(NOT HAS_EIGEN3)
+	SET(EIGEN3_INCLUDE_PATH "" CACHE PATH "Set the include path to Eigen (such that <Eigen/Dense> exists there)" )
+	IF (EXISTS "${EIGEN3_INCLUDE_PATH}/Eigen/Dense")
+		MESSAGE(STATUS "Using eigen3 in: ${EIGEN3_INCLUDE_PATH}")
+		INCLUDE_DIRECTORIES("${EIGEN3_INCLUDE_PATH}")
+		SET(HAS_EIGEN3 1)
+	ENDIF (EXISTS "${EIGEN3_INCLUDE_PATH}/Eigen/Dense")
+ENDIF(NOT HAS_EIGEN3)
 
 # Include dir:
 INCLUDE_DIRECTORIES(${nanoflann_SOURCE_DIR}/include)
