@@ -1,4 +1,4 @@
-nanoflann 1.1.3: In SVN trunk
+nanoflann 1.1.3: Released Jun 6, 2012
   * GTest sources are now embedded, due to the changes in newer Ubuntu packages which don't carry the precompiled libs.
   * Added asserts to detect whether the user passes NULL as query points.
   * New method RadiusResultSet::worst_item()
@@ -6,6 +6,8 @@ nanoflann 1.1.3: In SVN trunk
   * Avoid potential collision of min/max macros with <windows.h>
   * Removed unneeded #include's of std headers. 
   * New sample code for vectors of vectors.
+  * Fixed building of tests for MSVC in Windows.
+  * Allow manually setting the path to Eigen3 (mainly for building examples under Windows).
 
 nanoflann 1.1.2: Released May 2, 2012
   * Better documentation and added graphs of a benchmarking for helping choosing "leaf_max_size".
